# flipper-pvm

./: .gitignore  README.md  package-lock.json
contracts/: Cargo.toml  Flipper.sol
contracts/.cargo/: config.toml
contracts/src/: flipper.rs
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ConnectWallet.tsx  FlipperCard.tsx  Providers.tsx
frontend/src/config/: contract.ts  wagmi.ts
src/: flipper.rs
