[package]
name = "flipper"
version = "0.1.0"
edition = "2021"
rust-version = "1.92"
build = "build.rs"

[[bin]]
name = "flipper"
path = "src/flipper.rs"

[dependencies]
alloy-core = { version = "0.8", default-features = false, features = ["sol-types"] }
pallet-revive-uapi = { version = "0.10", default-features = false }
picoalloc = { version = "5", default-features = false }
polkavm-derive = { version = "0.30.0" }

[build-dependencies]
cargo-pvm-contract-builder = "0.2.3"


[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true
overflow-checks = false